Attempting to fix issue with nav-link jumping to wrong spot

--- a/style.css
+++ b/style.css
@@ -179,7 +179,13 @@ hr{
     content: "";
     display:block;
   }
-  
+
+  .storefront:before {
+    height: 154px;
+    content: "";
+    display:block;
+  }
+
   .carousel-item {
     height: 20vh;
     max-height: 20vh;
